# video-dub

./: .gitignore  README.md  pyproject.toml
src/: config.py  contracts.py  main.py
src/core/: media.py  stt.py  translate.py  tts.py
src/services/stt/: faster_whisper_stt.py
src/services/translate/: ollama_translator.py
src/services/tts/: EdgeTTSegment.py
src/utils/: folders.py  media.py  storage.py
