[project]
name = "video-dub"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "edge-tts>=7.2.7",
    "faster-whisper>=1.2.1",
    "ffmpeg>=1.4",
    "ffmpeg-python>=0.2.0",
    "imageio[ffmpeg]>=2.37.2",
    "ollama>=0.6.1",
    "omegaconf>=2.3.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
]
